--- a/ProjectSound.ipynb
+++ b/ProjectSound.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "31a45951",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lê o arquivo de áudio\n",
+    "# Leitura do arquivo de Audio\n",
     "signal, fs = sf.read('Audio.wav')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "314f6d99",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,7 @@
     }
    ],
    "source": [
+    "# Plot do gráfico do domínio do tempo\n",
     "t = np.linspace(0, len(signal)/fs, len(signal))\n",
     "plt.plot(t, signal, color=plt.cm.twilight(0.4))\n",
     "plt.title(\"Audio x Time\")\n",
@@ -81,6 +82,7 @@
     }
    ],
    "source": [
+    "# Plot do gráfico do domínio da frequência\n",
     "plt.plot(frequency_dom[:len(n)//14], np.abs(n[:len(n)//14]),color=plt.cm.twilight(0.4))\n",
     "\n",
     "plt.title(\"Frequency Spectrum\")\n",
@@ -97,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Função para aplicar filtros no domínio da frequência\n",
+    "# Função para aplicar filtros no domínio da frequência através da transformada de Fourier\n",
     "#Parâmetros:\n",
     "        #signal_fft (np.array): Coeficientes da FFT do sinal\n",
     "        #frequencies (np.array): Array de frequências correspondente\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "a183f521",
    "metadata": {},
    "outputs": [
@@ -139,9 +141,9 @@
     }
    ],
    "source": [
-    "n_filtered = fft_filter(n, frequency_dom, 'low', 2000)\n",
-    "plt.plot(frequency_dom[:len(frequency_dom)//14], np.abs(n_filtered[:len(n)//14]),color=plt.cm.twilight(0.4))\n",
-    "plt.set_cmap('inferno')\n",
+    "# Plot do gráfico do domínio da frequencia com o filtro aplicado\n",
+    "frequency_dom_filtered = fft_filter(n, frequency_dom, 'low', 2000)\n",
+    "plt.plot(frequency_dom[:len(frequency_dom)//14], np.abs(frequency_dom_filtered[:len(n)//14]),color=plt.cm.twilight(0.4))\n",
     "plt.title(\"Frequency domain\")\n",
     "plt.xlabel(\"Frequency (Hz)\")\n",
     "plt.ylabel(\"Magnitude\")\n",
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "c49352a1",
    "metadata": {},
    "outputs": [
@@ -167,9 +169,10 @@
     }
    ],
    "source": [
-    "time_dom = np.real(ifft(n_filtered))\n",
-    "t = np.linspace(0, len(time_dom)/fs, len(time_dom))\n",
-    "plt.plot(t, time_dom, color=plt.cm.twilight(0.6))\n",
+    "# Plot do gráfico do domínio do tempo com o filtro aplicado através da transformada inversa de Fourier\n",
+    "time_dom_filtered = np.real(ifft(frequency_dom_filtered))\n",
+    "t = np.linspace(0, len(time_dom_filtered)/fs, len(time_dom_filtered))\n",
+    "plt.plot(t, time_dom_filtered, color=plt.cm.twilight(0.6))\n",
     "plt.title(\"Audio x Time\")\n",
     "plt.xlabel(\"Time (s)\")\n",
     "plt.ylabel(\"Amplitude\")\n",
@@ -183,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reproduz áudio filtrado\n",
-    "sd.play(time_dom, fs)"
+    "# Reproduz o áudio já filtrado\n",
+    "sd.play(time_dom_filtered, fs)"
    ]
   },
   {
@@ -212,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
